Replacing Jackson 2 with Jackson 3